# sv2-apps

./: .envrc  .gitignore  bitcoind.Dockerfile  docker-compose.yml  flake.nix  jdc.Dockerfile  pool.Dockerfile  rust-toolchain.toml  tproxy.Dockerfile
.github/workflows/: auto-rebase.yaml  check-docker-config.yaml  ci-nix.yml  ci.yaml  coverage.yaml  docker-release.yaml  integration-tests.yaml  lockfiles.yaml  msrv.yaml  notify-jdc-tproxy-config-update.yaml  semver-check.yaml  stratum-core-sync.yaml
bitcoin-core-sv2/: Cargo.toml
config/: jdc-config.toml  jdc-config.toml.template  pool-config.toml  translator-config.toml  translator-proxy-config.toml.template
docker/: Dockerfile  README.md  REPRODUCIBILITY.md  docker-compose.yml  docker_env.example
docker/config/: pool-config.toml.template
docs/: shape-proxy-design-v2.md  shape-proxy-implementation-plan.md
integration-tests/: Cargo.toml
integration-tests/lib/: metrics_assert.rs  mod.rs  prometheus_metrics_assertions.rs  sniffer.rs  utils.rs
integration-tests/lib/mining_device/: mod.rs
integration-tests/tests/: bitcoin_core_ipc_integration.rs  extensions.rs  jd_integration.rs  jd_provide_missing_transaction.rs  jd_tproxy_integration.rs  jdc_block_propagation.rs  jdc_cached_shares.rs  jdc_receives_submit_shares_success.rs  jds_block_propagation.rs  monitoring_integration.rs  pool_integration.rs  sniffer_integration.rs  sv1.rs  sv2_mining_device.rs  tp_fallback_integration.rs  translator_integration.rs
miner-apps/jd-client/: Cargo.toml  README.md
miner-apps/jd-client/config-examples/mainnet/: jdc-config-bitcoin-core-ipc-hosted-infra-example.toml  jdc-config-bitcoin-core-ipc-local-infra-example.toml  jdc-config-hosted-infra-example.toml  jdc-config-local-infra-example.toml
miner-apps/jd-client/src/: args.rs
miner-apps/jd-client/src/lib/: config.rs  (+5 more)
miner-apps/translator/: Cargo.toml  README.md
miner-apps/translator/src/: args.rs
pool-apps/jd-server/: Cargo.toml
pool-apps/pool/: Cargo.toml  README.md
pool-apps/pool/src/: args.rs
scripts/: list-config-schema-changes.sh  validate-docker-config.sh
stratum-apps/: Cargo.toml
stratum-apps/examples/: keygen-authority.rs
stratum-apps/src/: extensions_negotiation.rs  lib.rs  tp_type.rs
stratum-apps/src/config_helpers/: loader.rs  logging.rs  mod.rs
stratum-apps/src/monitoring/: README.md  client.rs  event_metrics.rs  health.rs  http_server.rs  mod.rs  openapi.json  prometheus_metrics.rs  routes.rs  server.rs  snapshot_cache.rs  snapshot_metrics.rs  sv1.rs
stratum-apps/src/network_helpers/: sv1_connection.rs
stratum-apps/src/utils/: protocol_message_type.rs  types.rs
test-tools/shape-proxy/: ARCHITECTURE.md  Cargo.toml  DEPLOY.md  PROFILES.md  README.md  config.example.toml
test-tools/shape-proxy/src/: api.rs  config.rs  downstream.rs  main.rs  metrics.rs  profile.rs  proxy.rs  share_gate.rs  upstream.rs
(+60 files in other folders)
