[package]
name = "bitcoin_core_sv2"
description = "A library to get Stratum V2 Template Distribution Protocol from Bitcoin Core over IPC"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["The Stratum V2 Developers"]
homepage = "https://stratumprotocol.org"
readme = "README.md"
keywords = ["stratum", "mining", "bitcoin", "bitcoin-core"]

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
capnp = "0.25.0"
capnp-rpc = "0.25.0"
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec", "compat"] }
async-channel = "1.5.1"

# fetching from github enables synchronizing development workflows across sv2-apps and stratum repos
# it MUST be changed before bitcoin-core-sv2 is published to crates.io
# with the proper version of stratum-core being fetched from crates.io as well
stratum-core = { git = "https://github.com/fossatmara/stratum", branch = "vardiff/parametric-thresholds" }

bitcoin-capnp-types = "0.2.0"
